loads of fixes and stuff

--- a/components/speaknow/CMakeLists.txt
+++ b/components/speaknow/CMakeLists.txt
@@ -1,2 +1,2 @@
 idf_component_register(SRCS "speaknow.c"
-	INCLUDE_DIRS "include" PRIV_REQUIRES unity esp_wifi)
+	INCLUDE_DIRS "include" PRIV_REQUIRES unity)
