funcs asan tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(rightnow2)
-if(${IDF_TARGET} STREQUAL "linux")
-idf_build_set_property(COMPILE_OPTIONS "-fsanitize=undefined" "-fno-sanitize=shift-base" APPEND)
-  idf_build_set_property(COMPILE_OPTIONS "-static-libasan" APPEND)
+
+if(${PROJECT_NAME} STREQUAL "unit_test_test")
+  if(${IDF_TARGET} STREQUAL "linux")
+    idf_build_set_property(COMPILE_OPTIONS "-fsanitize=undefined" "-fsanitize=shadow-call-stack" "-fsanitize=leak" "-fsanitize=vla-bound" "-fsanitize=null" "-fsanitize=bounds-strict" "-fsanitize=alignment" "-fsanitize=enum" "-fstack-protector" APPEND)
+  else()
+    idf_build_set_property(COMPILE_OPTIONS "-fsanitize=undefined" "-fno-sanitize=shift-base" "-fsanitize=shadow-call-stack" "-fsanitize=leak" "-fsanitize=vla-bound" "-fsanitize=null" "-fsanitize=bounds-strict" "-fsanitize=alignment" "-fsanitize=enum" "-fstack-protector" APPEND)
+  endif()
 endif()
